--- a/Logistic Regression.Rmd
+++ b/Logistic Regression.Rmd
@@ -10,23 +10,19 @@ output: html_document
 library(ggplot2)
 library(tibble)
 library(dplyr)
-library(DataExplorer)
 library(DT)
-library(scales)
-library(plotly)
 library(rmarkdown)
 library(knitr)
 library(e1071)
 library(corrplot)
 library(prettydoc)
 library(cowplot)
+library(caret)
 ```
 
 ##Loading the dataset and preparing it
 ```{r}
-
-heart<-read.delim("C:/Users/hp/Desktop/EDA - statlog heart data/heart.dat",header = F,sep = " ")
-
+heart<-read.delim("C:/Users/u23e20/Downloads/Phase 1 EDA - Statlog Heart Disease/heart.dat",header = F,sep = " ")
 colnames(heart)<-c("age","sex","CPType","restBP","cholesterol","fastingBS_g120","restECG","maxHR","ExIndAngina","oldPeak","slopePEST","nVessels","thalD","HeartDisease")
 heart$slopePEST <- factor(heart$slopePEST,c(1,2,3),c("Up","Flat","Down"))
 heart$HeartDisease <- factor(heart$HeartDisease,c(1,2),c("No","Yes"))
@@ -38,9 +34,6 @@ heart$fastingBS_g120 <- factor(heart$fastingBS_g120,c(0,1),c(F,T))
 heart$CPType <- factor(heart$CPType,c(1,2,3,4),c("Typical","Atypical","Non-Anginal","Asymptomatic"))
 heart$sex <- factor(heart$sex,levels=c(0,1),labels=c('F','M'))
 #datatable(heart) #glimpse
-
-
-
 #DT::datatable(heart, options = list(
 #  pageLength=5, scrollX='400px'), filter = 'top')
 #summarizeColumns(heart) %>% knitr::kable( caption =  'Glimpse ')
@@ -53,11 +46,15 @@ set.seed(500)
 train_ind <- sample(seq_len(nrow(heart)),size = sample_size)
 train_set <- heart[train_ind,]
 test_set <- heart[-train_ind,]
-summary(train_set)
-summary(test_set)
+```
 
+###Checking the number of heart diseae patients in each set
 
-
+```{r}
+#Training Set
+summary(train_set$HeartDisease)
+#Testing Set
+summary(test_set$HeartDisease)
 ```
 
 ##Logistic Regression
@@ -67,7 +64,7 @@ Let's see if sex (female/male) is a good predictor. But first, let's just look a
 xtabs(~ HeartDisease + sex, data=train_set)
 ```
 
-Applying Logistic regression between the target variable and the gender of the patient:
+####Applying Logistic regression between the target variable and the gender of the patient:
 
 ```{r}
 #Using glm() function, which stands for Generalized Linear Models, in which we have chosen the binomial family, which does the logistic regression for us    
@@ -75,11 +72,29 @@ logistic_gender <- glm(HeartDisease ~ sex, data=train_set, family="binomial")
 summary(logistic_gender)
 ```
 
+##Testing the accuracy of our model
+###Training Accuracy
+```{r}
+logistic_gender <- train(HeartDisease ~sex,  data=train_set, method="glm", family="binomial")
+pred_train = predict(logistic_gender, newdata=train_set)
+confusionMatrix(data=pred_train, train_set$HeartDisease)
+```
+
+###Testing Accuracy
+```{r}
+logistic_gender <- train(HeartDisease ~sex,  data=train_set, method="glm", family="binomial")
+pred = predict(logistic_gender, newdata=test_set)
+confusionMatrix(data=pred, test_set$HeartDisease)
+```
+
+
 ```{r}
 logistic_full <- glm(HeartDisease ~ ., data=train_set, family="binomial")
 summary(logistic_full)
 ```
+
 ```{r}
+logistic_full <- glm(HeartDisease ~ ., data=train_set, family="binomial")
 predicted.data <- data.frame(
   probability.of.hd=logistic_full$fitted.values,
   heart_disease=train_set$HeartDisease)
@@ -87,10 +102,52 @@ predicted.data <- data.frame(
 predicted.data <- predicted.data[
   order(predicted.data$probability.of.hd, decreasing=FALSE),]
 predicted.data$rank <- 1:nrow(predicted.data)
-
-ggplot(data=predicted.data, aes(x=rank, y=probability.of.hd)) +
-  geom_point(aes(color=heart_disease), alpha=1, shape=4, stroke=2) +
-  xlab("Index") +
-  ylab("Predicted probability of getting heart disease")
+#ggplot(data=predicted.data, aes(x=rank, y=probability.of.hd)) +
+ # geom_point(aes(color=heart_disease), alpha=1, shape=4, stroke=2) +
+ # xlab("Index") +
+ # ylab("Predicted probability of getting heart disease")
 ```
+
+##Testing the accuracy of full model
+###Training Accuracy
+```{r,warning=FALSE}
+logistic_full <- train(HeartDisease ~.,  data=train_set, method="glm", family="binomial")
+pred_train = predict(logistic_full, newdata=train_set)
+confusionMatrix(data=pred_train, train_set$HeartDisease)
+```
+
+###Testing Accuracy
+```{r,warning=FALSE}
+pred = predict(logistic_full, newdata=test_set)
+confusionMatrix(data=pred, test_set$HeartDisease)
+```
+
+
+##Plotting the predictions of test set
+```{r}
+pred = predict(logistic_full, newdata=test_set,type = "prob")
+
+predicted.data <- data.frame(
+  probability.of.hd=pred$Yes,
+  heart_disease=test_set$HeartDisease)
+ 
+predicted.data <- predicted.data[
+  order(predicted.data$probability.of.hd, decreasing=FALSE),]
+predicted.data$rank <- 1:nrow(predicted.data)
+
+pred <- pred%>%mutate(heart_disease = ifelse(Yes>=0.5, "Yes", "No"))
+
+#ggplot(data=predicted.data, aes(x=rank, y=probability.of.hd)) +
+  #geom_point(aes(color=heart_disease), alpha=1, shape=4, stroke=2) +
+ # xlab("Index") +
+ # ylab("Predicted probability of getting heart disease")
+
+
+```
+
+##ROC Curve
+```{r,warning=FALSE,message=FALSE}
+
+```
+
 
