--- a/EDA - Idris (1).Rmd
+++ b/EDA - Idris (1).Rmd
@@ -986,80 +986,321 @@ Summing up our Exploratory Data analysis, we conclude on the following points:
 
 #Predictive Modelling
 
-####Feature Scaling
-```{r}
-heart_scaled<- heart
-heart_scaled$age <- ( scale(heart[1] ))
-heart_scaled$restBP <- ( scale(heart[4] ))
-heart_scaled$cholesterol <- ( scale(heart[5] ))
-heart_scaled$maxHR <- ( scale(heart[8] ))
-heart_scaled$oldPeak <- ( scale(heart[10] ))
+Predictive analytics is an area of statistics that deals with extracting information from data and using it to predict trends and/or behavioral patterns. We are going to use various Machine Learning algorithms in order to predict whether a patient has heart disease or not, based on the predictor variables in our dataset.
 
-View(heart_scaled)
-```
+><b>Learning, for a computer is nothing but encoding information about the environment into the parameters of the model.</b>
 
+###Splitting the data
+We are splitting our dataset into training data and test data. The training set includes the target variable and the model learns on this data in order to be generalized to other data later on. We have the test dataset in order to test our model’s prediction after the model has been trained. A 70:30 split is what we will use to randomly put patients in training or testing subset.
 
-####Splitting the data
-```{r}
-sample_size <- floor(0.7*nrow(heart_scaled))
+```{r echo=F}
+sample_size <- floor(0.7*nrow(heart))
 set.seed(500)
-train_ind <- sample(seq_len(nrow(heart_scaled)),size = sample_size)
-train_set <- heart_scaled[train_ind,]
-test_set <- heart_scaled[-train_ind,]
+train_ind <- sample(seq_len(nrow(heart)),size = sample_size)
+train_set <- heart[train_ind,]
+test_set <- heart[-train_ind,]
 ```
 
-####Checking the number of heart disease patients in each set
+###Checking the number of heart disease patients in each set
 
-```{r}
-#Training Set
+####Training Set
+```{r,echo=F}
 summary(train_set$HeartDisease)
-#Testing Set
+```
+
+The training subset has 81 patients with heart disease (roughly 43 percent of the training subset) and 108 patients without heart disease, which constitutes the remaining 57 percent of the training subset. The training subset has 189 observations, or rows.
+
+####Testing Set
+```{r,echo=F}
 summary(test_set$HeartDisease)
 ```
 
+The testing subset has 39 patients with heart disease (roughly 48 percent of the testing subset) and 42 patients without heart disease, which constitutes the remaining 52 percent of the testing subset. The testing subset has 81 observations.
+
+With the training and testing subsets ready, we can now apply Machine Learning models and use their accuracy and various other metrics to choose the model that outshines the others for our problem, that is predicting heart disease in patients.
+
+Since ours is a Classification problem, we will use the following algorithms:
+
+1. Logistic Regression
+
+2. Decision Trees
+
+3. Random Forests
+
 #Logistic Regression
-```{r}
+
+Logistic Regression, unlike its name suggests, is a classification algorithm, that is used when the response variable is categorical. The idea of Logistic Regression is to find a relationship between the features and the probability of a particular outcome of the target variable. To be more specific, we are using <b>Binomial Logistic Regression</b>, since our target variable is categorical with only two classes - Yes or No.   
+
+We will apply Logistic regression in he following fashion and then discuss the implications of each one of them:
+
+1. Using all predictor variables/features
+
+2. Using Backward Propogation for selecting important features
+
+3. Using only the significant features from the EDA  
+
+###1. Using all predictor variables
+```{r echo=F}
 logistic_full <- glm(HeartDisease ~ ., data=train_set, family="binomial")
 summary(logistic_full)
 ```
 
-###Testing the accuracy of Logistic Regression
+<ul>
+<li>Each individual category of categorical variable is considered as an independent binary variable by default, this saves us the trouble of creating dummy variables in our dataset.</li>
+
+<li><b>Deviance</b> is a measure of goodness of fit of a model, or to be precise, it is the measure of badness of fit of a model. as the lesser the deviance, the better the fit.</li>
+<ul>
+<li><b>Null deviance</b> tells us how well the response is predicted by a model with nothing but the intercept, i.e. no predictor variables.</li>
+<li><b>Residual deviance</b> is much lower than the null deviance. This points out that the model has indeed improved with the addition of predictor variables.</li>
+</ul>
+<li><b>AIC:</b> Its full form is Akaike Information Criterion (AIC). This is useful when we have more than one model to compare the goodness of fit of the models.It is a maximum likelihood estimate which penalizes to prevent overfitting. It measures flexibility of the models. Lower AIC of model is better than the model having higher AIC.</li>
+<li><b>Number of Fisher Scoring iterations</b> tells us how many iterations this algorithm ran before it stopped.</li>
+</ul>
+
+
+
+
 ####Training Accuracy
-```{r,warning=FALSE}
+```{r,warning=FALSE,echo=F}
 logistic_full <- train(HeartDisease ~.,  data=train_set, method="glm", family="binomial")
+
 pred_train = predict(logistic_full, newdata=train_set)
+
 confusionMatrix(data=pred_train, train_set$HeartDisease)
+
+```
+
+<ul>
+<li><b>Accuracy</b> of our model is defined as the correct classifications divided by the total number of classifications.</li>
+<li><b>Kappa</b> is similar to Accuracy score, but it takes into account the accuracy that would have happened anyway through random predictions.
+Kappa = (Observed Accuracy - Expected Accuracy) / (1 - Expected Accuracy)</li>
+  <li><b>Sensitivity</b> = True Positive Rate (TP/TP+FN) - It says, out of all the positive (majority class) values, how many have been predicted correctly’.</li>
+<li><b>Specificity</b> = True Negative Rate (TN/TN +FP) - It says, out of all the negative (minority class) values, how many have been predicted correctly.</li>
+<li><b>Detection rate</b> is the proportion of the whole sample where the events were detected correctly.</li>
+<li><b>Balanced Accuracy</b> takes into account the class imbalance, as it is calculated from sensitivity and specificity, rather than the actual data. It is thus, a better metric than plain accuracy. Balanced Accuracy=(Sensitivity+Specificity)/2.</li>
+</ul>
+####Testing Accuracy
+```{r,warning=FALSE,echo=F}
+pred = predict(logistic_full, newdata=test_set)
+confusionMatrix(data=pred, test_set$HeartDisease)
+
+
+```
+
+
+###2. Using backward propogation for Feature selection
+```{r,echo=F}
+#step(logistic_full,direction="backward",trace = FALSE)
+logistic_back<-glm(formula = HeartDisease ~ sex + CPType + restBP + cholesterol + 
+    maxHR + oldPeak + nVessels, family = "binomial", data = train_set)
+summary(logistic_back)
+```
+
+###Testing the accuracy of Logistic Regression with backward selection 
+####Training Accuracy
+```{r,echo=F}
+logistic_back <- train(HeartDisease ~ sex + CPType + restBP + cholesterol + 
+    maxHR + oldPeak + nVessels,data=train_set, method="glm", family="binomial")
+
+pred_train_back = predict(logistic_back,newdata = train_set)
+
+confusionMatrix(data=pred_train_back, train_set$HeartDisease)
 ```
 
 ####Testing Accuracy
-```{r,warning=FALSE}
-pred = predict(logistic_full, newdata=test_set)
-confusionMatrix(data=pred, test_set$HeartDisease)
+```{r,warning=FALSE,echo=F}
+
+pred_test_back = predict(logistic_back, newdata=test_set)
+confusionMatrix(data=pred_test_back, test_set$HeartDisease)
+
 ```
 
 
-#PCA
-```{r}
-#Load factoextra for visualization 
-library(factoextra)
-#compute PCA 
-var <- c(1,4,5,8,10)
-heart_pca <- prcomp(train_set[,var], center = TRUE, scale. = TRUE)
-heart_pca 
 
-#summary
-summary(heart_pca) 
+###3. Using significant variables
+```{r,echo=F}
 
-#Show the percentage of variances explained by each principle component.
-fviz_eig(heart_pca) 
+logistic_sig<-glm(formula = HeartDisease ~ sex + CPType + restBP + cholesterol + 
+     restECG+ ExIndAngina + nVessels+slopePEST, family = "binomial", data = train_set)
+summary(logistic_sig)
+```
 
-#Regression Model
-'''
-scoreHouses <- house.pca$x
-modHouses <- lm(train$price~scoreHouses[,1:3]+bedrooms+bathrooms+floors+waterfront+view+condition+grade+yr_renovated+zipcode,data = train) 
 
-summary(modHouses)'''
+####Training Accuracy
+```{r,echo=F,message=F,warning=F}
+logistic_sig <- train(HeartDisease ~ sex + CPType + restBP + cholesterol + 
+     restECG+ ExIndAngina + nVessels+slopePEST,data=train_set, method="glm", family="binomial")
 
+pred_train_back = predict(logistic_sig,newdata = train_set)
+
+confusionMatrix(data=pred_train_back, train_set$HeartDisease)
+```
+
+####Testing Accuracy
+```{r,warning=FALSE,echo=F}
+
+pred_test_back = predict(logistic_sig, newdata=test_set)
+confusionMatrix(data=pred_test_back, test_set$HeartDisease)
+
+```
+
+
+##Comparing all Logistic Regression Models
+```{r,message=FALSE,echo=FALSE,warning=FALSE}
+LR_Models<-data.frame(Model=c("Using all predictor variables","Using Backward Propogation","Using only the significant features "),Training_Accuracy=c(87.6,85.4,85.6),Testing_Accuracy =c(83.4,77.1,82.1),Sensitivity=c(69.2,58.9,66.6),Specificity=c(97.6,95.2,97.6))
+
+DT::datatable(LR_Models, options = list(
+  pageLength=4, scrollX='400px'), filter = 'top')
+```
+
+
+##Decision Tree
+A decision tree is a tree where each node represents a feature(or attribute), each link( or branch) represents a decision based on the value of the respective feature and each leaf represents an outcome, which is categorical in our case.
+```{r,message=FALSE,echo=FALSE,warning=FALSE}
+library(rpart)
+library(readr)
+library(party)
+library(nnet)
+library(ggraph)
+library(igraph)
+library(rpart.plot)
+library(partykit)
+```
+
+```{r,echo=F}
+model_hd1 <- rpart(train_set$HeartDisease~., data=train_set)
+rpart.plot(model_hd1)
+#rpart.rules(model_hd1)
+```
+
+The above decision tree expains that-
+
+<b>The patient doesn't have heart disease under the following circumstances:</b>
+
+1. When nVessels is 1 or 2 or 3 & CPType is Typical or Non-Anginal  & slopePEST is Up or Down.
+
+2.  When nVessels is 0 & maxHR >= 132.  
+
+<b>Whereas the patient has heart disease under the following circumstances:</b>
+
+1. When nVessels is 0 & maxHR <  132.
+
+2. When nVessels is 1 or 2 or 3 & CPType is Typical or Non-Anginal &  slopePEST is Flat.
+
+3. When nVessels is 1 or 2 or 3 & CPType is Atypical or Asymptomatic.
+
+###Testing the accuracy of Decision Tree
+####Training Accuracy
+```{r,echo=F}
+train_set2<-train_set
+pr2<- predict(model_hd1, train_set)
+train_set2$predictions<-pr2[,2]
+train_set2<-train_set2 %>% mutate(HeartDisease_pred=ifelse(predictions>0.5,"Yes","No"))
+tt2 <- table(train_set2$HeartDisease_pred, train_set$HeartDisease)
+confusionMatrix(tt2)
+```
+
+####Testing Accuracy
+```{r,warning=FALSE,echo=F}
+test_set2<-test_set
+pr2<- predict(model_hd1, test_set)
+test_set2$predictions<-pr2[,2]
+test_set2<-test_set2 %>% mutate(HeartDisease_pred=ifelse(predictions>0.5,"Yes","No"))
+tt2 <- table(test_set2$HeartDisease_pred, test_set$HeartDisease)
+confusionMatrix(tt2)
+```
+
+The accuracy (correct classifications / total classifications) of the model including all the predictor variables is about 70 % whereas balanced accuracy is about 69.8%.
+
+The Kappa statistic (or value) is a metric that compares an Observed Accuracy with an Expected Accuracy (random chance). Kappa = (Observed Accuracy - Expected Accuracy) / (1 - Expected Accuracy)
+
+Sensitivity that is the number of correct positive predictions divided by the total number of positives is 83%. Specificity that is the number of correct negative predictions divided by the total number of negatives is 56%.
+
+Prevalence is a numeric value or matrix for the rate of the “positive” class of the data.
+
+Detection rate is the proportion of the whole sample where the events were detected correctly.
+
+Detection Prevalence tells What percentage of the full sample was predicted as Healthy.
+
+Balanced Accuracy is the balance between correctly predicting the Heart disease in a patient. Balanced Accuracy=(sensitivity+specificity)/2
+
+##Random Forest
+
+```{r,message=FALSE,warning=FALSE,echo=F}
+library(randomForest)
+heart_rf=randomForest(HeartDisease ~ . , data = train_set)
+heart_rf
+heart_rf$importance
+```
+
+Here number of trees are 500 , and on an average, OOB error is about 17% so the accuracy is 83%.
+
+As the forest is built on training data , each tree is tested on the 1/3rd of the samples not used in building that tree. This is the out of bag error estimate - an internal error estimate of a random forest as it is being constructed. Confusion Matrix also gives the error in predicting a particular class.
+
+###Testing the accuracy of Random Forest
+```{r,echo=F}
+library(caret)
+pred = predict(heart_rf, newdata=test_set)
+confusionMatrix(data=pred, test_set$HeartDisease)
+```
+
+Accuracy(correct classifications / total classifications) is 79% whereas balanced accuracy is 78% for prediction on test data.
+
+Kappa is similar to Accuracy score, but it takes into account the accuracy that would have happened anyway through random predictions.
+
+Kappa = (Observed Accuracy - Expected Accuracy) / (1 - Expected Accuracy)
+
+Sensitivity = True Positive Rate (TP/TP+FN) - It says, ‘out of all the positive (majority class) values, how many have been predicted correctly’.
+
+Specificity = True Negative Rate (TN/TN +FP) - It says, ‘out of all the negative (minority class) values, how many have been predicted correctly’.
+
+Here, Sensitivity is about 95% where as specificity is about 61%.
+
+Prevalence is a numeric value or matrix for the rate of the “positive” class of the data.
+
+Detection rate is the proportion of the whole sample where the events were detected correctly.
+
+Detection Prevalence tells What percentage of the full sample was predicted as Healthy.
+
+Balanced Accuracy is the balance between correctly predicting the Heart disease in a patient. Balanced Accuracy=(sensitivity+specificity)/2
+
+
+##Cross Validation Method on Random Forest
+The k-fold cross validation method involves splitting the dataset into k-subsets. For each subset is held out while the model is trained on all other subsets. This process is completed until accuracy is determined for each instance in the dataset, and an overall accuracy estimate is provided. It is a robust method for estimating accuracy. Here we have taken k=5.
+```{r,echo=F}
+model_cv_rf <- train(HeartDisease~.,data=heart,method="rf",trControl = trainControl(method = "cv",number = 3))
+model_cv_rf
+```
+
+
+##Cross Validation Method on Logistic regression
+The k-fold cross validation method involves splitting the dataset into k-subsets. For each subset is held out while the model is trained on all other subsets. This process is completed until accuracy is determine for each instance in the dataset, and an overall accuracy estimate is provided. It is a robust method for estimating accuracy. Here we have taken k=5.
+```{r,echo=F}
+model_cv_logistic <- train(HeartDisease~.,data=heart,method="glm",family="binomial",trControl = trainControl(method = "cv",number = 5))
+model_cv_logistic
+```
+
+```{r,echo=F}
+model_cv_logistic <- train(HeartDisease ~ sex + CPType + restBP + cholesterol + 
+    maxHR + oldPeak + nVessels,data=heart,method="glm",family="binomial",trControl = trainControl(method = "cv",number = 5))
+model_cv_logistic
+```
+
+
+##Cross Validation Method on Decision Trees
+The k-fold cross validation method involves splitting the dataset into k-subsets. For each subset is held out while the model is trained on all other subsets. This process is completed until accuracy is determine for each instance in the dataset, and an overall accuracy estimate is provided. It is a robust method for estimating accuracy. Here we have taken k=5.
+```{r,echo=F}
+model_cv_dt <- train(HeartDisease~.,data=heart,method="rpart",trControl = trainControl(method = "cv",number = 5))
+model_cv_dt
+```
+
+##Conclusion of the Predictive Analysis
+
+```{r,echo=F}
+Models<-data.frame(Model=c("Logistic Regression","Logistic Regression with backward Selection","Decision Tree","Random Forest"),Training_Accuracy=c(87.6,85.4,85.3,83),Testing_Accuracy =c(83.4,77.1,69.8,78.3),Cross_Validation_Acuracy=c(83,78,71.8,82))
+
+DT::datatable(Models, options = list(
+  pageLength=4, scrollX='400px'), filter = 'top')
 ```
 
 
